cmake_minimum_required(VERSION 3.17)
project(untitled1)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled1 main.cpp Date.h Date.cpp ZorkUL.h Bedroom.h Bedroom.cpp Room.cpp Room.h Parser.cpp Parser.h item.cpp item.h CommandWords.cpp CommandWords.h Command.cpp Command.h Character.cpp Character.h Inventory.cpp Inventory.h ZorkUL.cpp Office.h Office.cpp Bathroom.cpp Bathroom.h Hallway.h Hallway.cpp "Unused Code.cpp")